src/apps/KankaJournal/KankaJournalApplication.scss
:root {
    --kanka-secret-color: #fc758920;
    --kanka-secret-border-color: #5f1c266e;
    --kanka-secret-icon-inversion: 100%;
    --kanka-avatar-color: rgba(0, 0, 0, 0.1);
}

%secret-icon-base {
    position: absolute;
    right: 2px;
    top: 50%;
    transform: translateY(-50%);
    vertical-align: middle;
    
    font-family: "Font Awesome 6 Pro";
    content: "\f070";
    font-weight: 900;
    color: var(--color-ownership-none);
}

%secret-icon-center {
    position: relative;
    padding-right: 20px;
    
    &:after {
        @extend %secret-icon-base;

        top: 50%;
        transform: translateY(-50%);
    }
}

%secret-icon-top {
    position: relative;
    padding-right: 20px;
    
    &:after {
        @extend %secret-icon-base;

        top: 2px;
    }
}

%secret {
    position: relative;

    &:before {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        background: var(--color-ownership-none);
        opacity: .05;
        pointer-events: none;
    }
}

%count-bubble {
    display: inline-block;
    margin-left: .5em;
    margin-top: 2px;
    border-radius: 50%;
    background: var(--color-border-dark-tertiary);
    color: var(--color-text-light-1);
    width: var(--kanka-bubble-size);
    height: var(--kanka-bubble-size);
    line-height: var(--kanka-bubble-size);
    font-size: calc(var(--kanka-bubble-size) * 0.7);

    vertical-align: top;
    text-align: center;
    text-indent: 0;
}

@keyframes sync-icon-spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.kanka-journal {
    .header-button.kanka-sync {
        i {
            animation-name: sync-icon-spin;
            animation-duration: 1s;
            animation-iteration-count: infinite;
            animation-timing-function: linear;
            animation-play-state: paused;
        }
        
        &.-loading i {
            animation-play-state: running;
        }
    }

    .kanka-count {
        --kanka-bubble-size: 15px;

        @for $i from 0 through 99 {
            &.kanka-count-#{$i} .page-title:after {
                @extend %count-bubble;
                content: '#{$i}';
            }
        }

        &.kanka-count-limit .page-title:after {
            @extend %count-bubble;
            content: '99+';
        }
    }

    $pageIcons: (
        'kanka-foundry\\.overview': '\f005',
        'kanka-foundry\\.post': '\f02d',
        'kanka-foundry\\.assets': '\f15b',
        'kanka-foundry\\.abilities': '\f06d',
        'kanka-foundry\\.inventory': '\f81c',
        'kanka-foundry\\.relations': '\f542',
        'kanka-foundry\\.attributes': '\e1d2',
        'kanka-foundry\\.children': '\f802',
        'kanka-foundry\\.events': '\f133',
        'kanka-foundry\\.character-profile': '\f007',
        'kanka-foundry\\.character-organisations': '\f0e8',
        'kanka-foundry\\.family-members': '\f0c0',
        'kanka-foundry\\.organisation-members': '\f0c0',
        'kanka-foundry\\.quest-elements': '\f5d3',

        'image': '\f1c5',
        'pdf': '\f1c1',
        'video': '\f03d',
    );
    
    @each $name, $glyph in $pageIcons {
        .directory-item.#{$name} {
            .page-number {
                font-size: 0;
    
                &:before {
                    content: '#{$glyph}';
                    font-size: var(--font-size-12);
                    font-weight: 900;
                    font-family: "Font Awesome 6 Pro";
                    vertical-align: middle;
                    color: var(--color-text-light-7);
                }
            }
        }
    }

    .journal-entry-pages .scrollable {
        display: flex;
        flex-direction: row;
        align-items: flex-start;
        align-content: flex-start;
        flex-wrap: wrap;
        margin-bottom: 1em;
        
        .journal-entry-page {
            width: 100%;
            flex: none;
        }

        .journal-entry-page.image:not(:only-child) {
            max-width: 40%;
            min-width: min-content;
            width: max-content;
            margin: 0 0.5em 0.5em 0;
            vertical-align: top;
            
            figure {
                margin-top: 0;

                img {
                    border: 1px solid var(--color-border-dark);
                }
            }
        }

        .journal-entry-page.image + .journal-entry-page.kanka-foundry\.overview {
            flex: 1;
            margin-top: 0;
        }
    }

    table {
        >*:not(thead) th {
            background: rgba(0, 0, 0, 0.5);
            color: var(--color-text-light-highlight);
            text-shadow: 1px 1px var(--color-shadow-dark);
            border-bottom: 1px solid var(--color-border-dark);
        }

        thead td {
            font-weight: bold;
        }

        td:first-child {
            font-weight: bold;
            padding-right: 1em;
        }

        td.center {
            text-align: center;
        }

        &.-secret {
            @extend %secret;

            > tr:first-child, *:first-child tr:first-child {
                td:last-child, th:last-child {
                    @extend %secret-icon-center;
                }
            }
        }

        tr.-secret {
            td {
                @extend %secret;
            }
            
            td:last-of-type {
                @extend %secret-icon-center;
            }
        }

        td.thumb {
            text-align: center;
            padding: 5px 15px 5px 5px;
            position: relative;
            width: 0px; // Shrink as small as possible

            > img, > .placeholder, >.label {
                display: block;
                min-width: 40px;
                width: 40px;
                height: 40px;
            }

            > img, > .placeholder {
                box-shadow: 0 0 2px 3px var(--kanka-avatar-color);
                background: var(--kanka-avatar-color);
                border: none;
            }

            > img {
                object-fit: cover;
            }

            > img + .placeholder {
                display: none;
            }

            > i {
                opacity: .5;
                font-size: 40px;
            }

            > .label {
                position: absolute;
                top: 50%;
                left: 5px;
                transform: translateY(-50%);
                
                display: flex;
                align-items: center;
                justify-content: center;
                z-index: 1;
                pointer-events: none;

                color: var(--color-text-light-highlight, #fff);
                text-shadow: 1px 1px var(--color-shadow-dark);
                font-size: 1.2em;

                background: RGBA(0,0,0,0.5);
            }

            &.-rounded {
                > img, > span {
                    border-radius: 50%;
                }
            }

            &.-large {
                > img, > .placeholder {
                    width: auto;
                    min-width: 80px;
                    max-width: 100px;
                    height: auto;
                    max-height: 80px;
                }
            }
        }
    }

    table.kanka-attributes {
        margin-top: 0;

        td:nth-child(2) {
            white-space: pre-line;
        }
    }
}

